--- a/css/style.css
+++ b/css/style.css
@@ -724,5 +724,11 @@ header {
     width: 95%;
   }
 }
+@media (max-width: 380px) {
+  .firstContent .left-bm #titleFirstContent {
+    width: 99%;
+    font-size: 40px;
+  }
+}
 
 /*# sourceMappingURL=style.css.map */
