--- a/sass/style.scss
+++ b/sass/style.scss
@@ -599,7 +599,7 @@ header{
   .headerHamburguer{
     opacity: 1;
     margin-bottom: 4em;
-    margin-top: 3em;
+    padding-top: 3em;
     display: flex;
     width: 100%;
     justify-content: space-around;
@@ -680,6 +680,14 @@ header{
   }
   .buttonsEvent{
     width: 13em;
+  }
+  .contentButtonsFt{
+    width: 70%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 1em;
   }
 }
 @media (max-width: 426px){
