--- a/sass/style.scss
+++ b/sass/style.scss
@@ -521,6 +521,71 @@ header{
 .headerHamburguer{
   opacity: 0;
 }
+.eventClickHamburguer{
+  display: none;
+  flex-direction: column;
+  background-color: hsl(229, 31%, 21%);
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  opacity: 0.95;
+  position:fixed;
+  .eventHamburguer{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    row-gap: 14em;
+    .eventTopHamburguer{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      row-gap: 2em;
+      .eventTop{
+        display: flex;
+        width: 100%;
+        align-items: center;
+        justify-content: center;
+        column-gap: 14%;
+        color: rgb(255, 255, 255);
+      }
+      .eventTop > img {
+        height: 2em;
+      }
+      .eventTop > p {
+        font-size: 32px;
+      }
+      .eventTopButtons{
+        display: flex;
+        flex-direction: column;
+        width: auto;
+        .buttonsEventTop{
+          background-color: transparent;
+          color: rgb(210, 210, 210);
+          border: none;
+          border-top: 1px solid hsl(231, 29%, 46%);
+          border-bottom: 1px solid hsl(231, 29%, 46%);
+          width: 15em;
+          font-size: 21px;
+          letter-spacing: 0.2em;
+          padding: 0.8em;
+          font-family: 'rubik';
+          &:hover{
+            margin: -1px 0px;
+            transition: 0.1s;
+            border: 2px solid rgb(255, 255, 255);
+          }
+        }
+      }
+    }
+    .eventFooterIcons{
+      display: flex;
+      justify-content: space-evenly;
+    }
+  }
+}
+
 @media(max-width: 1025px){
   header{
     justify-content: space-around;
