--- a/sass/style.scss
+++ b/sass/style.scss
@@ -671,7 +671,7 @@ header{
     }
   }
   .firstContent .left-bm #titleFirstContent{
-    width: 90%;
+    width: 93%;
   }
   .firstContent .right-bm #img-ilust{
     width: 20rem;
@@ -773,12 +773,13 @@ header{
   }
   .firstContent .left-bm #titleFirstContent{
     width: 95%;
+    font-size: 2.2em;
   }
 }
 @media (max-width: 380px){
   .firstContent .left-bm #titleFirstContent{
     width: 99%;
-    font-size: 35px;
+    font-size: 1.8em;
   }
   .fourthContent #titleFourthContent{
     text-align: center;
