--- a/sass/style.scss
+++ b/sass/style.scss
@@ -612,7 +612,14 @@ section{
     }
   }
 }
-
+@media (min-width: 1500px){
+  .txt .divLeftEvent .backgroundBlueleft{
+    display: none;
+  }
+  .firstContent .right-bm .backgroundBlueRigth{
+    display: none;
+  }
+}
 @media(max-width: 1025px){
   header{
     justify-content: space-around;
@@ -647,10 +654,17 @@ section{
         justify-content: center;
       }
     }
+    .right-bm .backgroundBlueRigth{
+      top: 16em;
+      width: 50%;
+    }
   }
   .txt{
     flex-direction: column;
     align-items: center;
+    .divLeftEvent{
+      margin-bottom: 2em;
+    }
     .divRightEvent {
       align-items: center;
       row-gap: 30px;
@@ -680,6 +694,9 @@ section{
   }
 }
 @media (max-width: 620px){
+  .firstContent .right-bm{
+    margin-bottom: 2em;
+  }
   header{
     display: none;
   }
@@ -701,7 +718,7 @@ section{
     width: 93%;
   }
   .firstContent .right-bm #img-ilust{
-    width: 20rem;
+    width: 28rem;
   }
   .secondContent #textSecondContent{
     width: 85%;
@@ -726,6 +743,9 @@ section{
     display: flex;
     justify-content: center;
     align-items: center;
+    .backgroundBlueleft{
+      width: 60%;
+    }
     #imgLeftEvent{
       width: 90%;
     }
@@ -758,6 +778,19 @@ section{
   }
 }
 @media (max-width: 484px){
+  .firstContent .right-bm .backgroundBlueRigth{
+    top: 12em;
+    border-radius: 0em 0em 0em 5em;
+    height: 12em;
+  }
+  .firstContent .right-bm{
+    display: flex;
+    justify-content: center;
+  }
+  .firstContent .right-bm #img-ilust{
+    width: 90%;
+    height: 15em;
+  }
   .div-btn-ft{
     flex-direction: column;
     align-items: center;
@@ -781,6 +814,13 @@ section{
   }
 }
 @media (max-width: 426px){
+  .txt .divLeftEvent{
+    margin-bottom: 3em;
+  }
+  .txt .divLeftEvent .backgroundBlueleft{
+    border-radius: 0em 0em 5em 0em;
+    height: 12em;
+  }
   #secondSection .btnSecondSection {
     flex-direction: column;
     row-gap: 10px;
@@ -807,6 +847,9 @@ section{
   .firstContent .left-bm #titleFirstContent{
     width: 99%;
     font-size: 1.8em;
+  }
+  .txt .divLeftEvent .backgroundBlueleft{
+    height: 10em;
   }
   .fourthContent #titleFourthContent{
     text-align: center;
